using UnityEngine;

public class NameTag
{
    public const string player = "Player";
    public const string Car = "Car";

    // Animation 

    public const string Idle = "Idle";
    public const string Run = "Run";
    public const string LeftSide = "LeftSide";
    public const string RightSide = "RightSide";
}
